# rust-unityextractor

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
src/: archive_operations.rs  file_operations.rs  main.rs  memory_tracker.rs  sanitize_path.rs  thread_pool.rs
