[package]
name = "rust-unityextractor"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2"
flate2 = "1.0"
tar = "0.4"
tokio = { version = "1.47", features = ["full"] }
log = "0.4"
simple_logger = "5"
num_cpus = "1.17"
bytesize = "2.0"
